// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifGrid/> debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    Testing
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="esto es un título"
      url="https://google.com"
    />
    <GifGridItem
      id="ABCDE"
      key="ABCDE"
      title="esto es un título 2"
      url="https://facebook.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el <GifGrid/> debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    Testing
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
